--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@ body {
 <li><a onclick="window.open(`https://${window.location.hostname}:4433/`)" title="SSH Client"><img src="linux.png" border="0" width="99px" height="88px"/></a><br>SSH Client</li>
 <li><a onclick="window.open(`http://${window.location.hostname}:8787/`)" title="R-server"><img src="r.png" border="0" width="99px" height="88px"/></a><br>R-server</li>
 <li><a onclick="window.open(`http://${window.location.hostname}:8080/`)" title="galaxy"><img src="galaxy.png" border="0" width="99px" height="88px"/></a><br>Galaxy</li>
-<li><a href="rdp://full%20address=s:IPofWindows" title="Windows"><img src="win.png" border="0" width="99px" height="88px"/></a><br>Windows</l>
+<li><a href="rdp://full%20address=s:IPofWindows" title="Windows"><img src="win.png" border="0" width="99px" height="88px"/></a><br>Windows <sup>1</sup></li>
 </ul>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<p>1. This link does not work in Windows (Works in macOS, android, iOS). In windows, tpye  <input type="text" value="mstsc /v:IPofWindows"/> in run or cmd.</p>
 </body>
 </html>
