--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@ body {
 <body>
 <h1>Lab Resource Index</h1>
 <ul>
-<li><a onclick="window.open(`/ssp`)" title="Change Password"><img src="key.png" border="0" width="99px" height="88px"/></a><br>Change Password</li>
-<li><a onclick="window.open(`https://${window.location.hostname}:4433/`)" title="SSH Client"><img src="linux.png" border="0" width="99px" height="88px"/></a><br>SSH Client</li>
+<!-- link to a subfolder -->
+<li><a onclick="window.open(`/subfolder`)" title="Change Password"><img src="key.png" border="0" width="99px" height="88px"/></a><br>Change Password</li>
+<!-- link to other port on the same server -->
 <li><a onclick="window.open(`http://${window.location.hostname}:8787/`)" title="R-server"><img src="r.png" border="0" width="99px" height="88px"/></a><br>R-server</li>
-<li><a onclick="window.open(`http://${window.location.hostname}:8080/`)" title="galaxy"><img src="galaxy.png" border="0" width="99px" height="88px"/></a><br>Galaxy</li>
+<!-- link to other server -->
 <li><a href="rdp://full%20address=s:IPofWindows" title="Windows"><img src="win.png" border="0" width="99px" height="88px"/></a><br>Windows <sup>1</sup></li>
 </ul>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
