--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: white;
+  color: black;
+  text-align: left;
+}
 </style>
 </head>
 <body>
@@ -31,7 +40,8 @@ body {
 <!-- link to other server -->
 <li><a href="rdp://full%20address=s:IPofWindows" title="Windows"><img src="win.png" border="0" width="99px" height="88px"/></a><br>Windows <sup>1</sup></li>
 </ul>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<p>1. This link does not work in Windows (Works in macOS, android, iOS). In windows, tpye  <input type="text" value="mstsc /v:IPofWindows"/> in run or cmd.</p>
 </body>
+<footer>
+<p>1. This link does not work in Windows (Works in macOS, android, iOS). In windows, tpye  <input type="text" value="mstsc /v:IPofWindows"/> in run or cmd.</p>
+</footer>
 </html>
