--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ footer {
 <h1>Lab Resource Index</h1>
 <ul>
 <!-- link to a subfolder -->
-<li><a onclick="window.open(`/subfolder`)" title="Change Password"><img src="key.png" border="0" width="99px" height="88px"/></a><br>Change Password</li>
+<li><a onclick="window.open(`/subfolder`)" title="Some Title"><img src="key.png" border="0" width="99px" height="88px"/></a><br>Some Lable</li>
 <!-- link to other port on the same server -->
 <li><a onclick="window.open(`http://${window.location.hostname}:8787/`)" title="R-server"><img src="r.png" border="0" width="99px" height="88px"/></a><br>R-server</li>
 <!-- link to other server -->
@@ -42,6 +42,6 @@ footer {
 </ul>
 </body>
 <footer>
-<p>1. This link does not work in Windows (Works in macOS, android, iOS). In windows, tpye  <input type="text" value="mstsc /v:IPofWindows"/> in run or cmd.</p>
+<p>1. This link does not work in Windows (Works in macOS, android, iOS). In windows, type  <input type="text" value="mstsc /v:IPofWindows"/> in run or cmd.</p>
 </footer>
 </html>
