--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@ footer {
 <h1>Lab Resource Index</h1>
 <ul>
 <!-- link to a subfolder -->
-<li><a onclick="window.open(`/subfolder`)" title="Some Title"><img src="key.png" border="0" width="99px" height="88px"/></a><br>Some Lable</li>
+<li><a onclick="window.open(`/subfolder`)" title="Some Title"><img src="key.png" border="0" width="99px" height="88px"/><br>Some Lable</a></li>
 <!-- link to other port on the same server -->
-<li><a onclick="window.open(`http://${window.location.hostname}:8787/`)" title="R-server"><img src="r.png" border="0" width="99px" height="88px"/></a><br>R-server</li>
+<li><a onclick="window.open(`http://${window.location.hostname}:8787/`)" title="R-server"><img src="r.png" border="0" width="99px" height="88px"/><br>R-server</a></li>
 <!-- link to other server -->
-<li><a href="rdp://full%20address=s:IPofWindows" title="Windows"><img src="win.png" border="0" width="99px" height="88px"/></a><br>Windows <sup>1</sup></li>
+<li><a href="rdp://full%20address=s:IPofWindows" title="Windows"><img src="win.png" border="0" width="99px" height="88px"/><br>Windows <sup>1</sup></a></li>
 </ul>
 </body>
 <footer>
